--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '3.1.5'
 	testImplementation group: 'io.projectreactor', name: 'reactor-test', version: '3.5.11'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
+	    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
+
 
 
 
