--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '3.1.5'
 	testImplementation group: 'io.projectreactor', name: 'reactor-test', version: '3.5.11'
+implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.12.0'
+testImplementation group: 'com.squareup.okhttp3', name: 'mockwebserver', version: '4.12.0'
 
 
 
