--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 
 springdoc.swagger-ui.csrf.enabled=true
+
+zendesk.account.url=URL
+zendesk.account.username=USERNAME
+zendesk.account.password=PASSWORD
+api.basic.auth.username=USERNAME
+api.basic.auth.password=PASSWORD
